# calendar-reminder

./: .gitignore  Package.swift  README.md  calendar_checker.py  config.py  example.ics  main.py  package-lock.json  pyproject.toml  reminder_window.py  run.sh  watch.sh
.claude/: settings.local.json
Sources/CalendarBlocker/: AppDelegate.swift  CalendarChecker.swift  Config.swift  ICalParser.swift  RRuleExpander.swift  ReminderWindow.swift  StatusBarController.swift  main.swift
swift-app/: watch.sh
swift-app/Sources/CalendarBlocker/: AppDelegate.swift  CalendarChecker.swift  Config.swift  ICalParser.swift  ReminderWindow.swift  main.swift
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
web/src/: canvas.ts  drawctx.ts  fallbackList.ts  layout.ts  leftColumn.ts  model.ts  script.ts  timeline.ts  utils.ts
