[project]
name = "calendar-blocker"
version = "0.1.0"
description = "Aggressive fullscreen meeting reminders from Google Calendar"
requires-python = ">=3.11"
dependencies = [
    "icalendar>=5.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
calendar-blocker = "main:main"

[tool.uv.scripts]
dev = "watchexec -e py -r -- uv run python main.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
